Most of my personal site is wire framed up

--- a/introHTML/index.html
+++ b/introHTML/index.html
@@ -4,11 +4,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🂡 Tom Walker Personal Site</title>
+    <title>Tom Walker Personal Site</title>
   </head>
   <body>
     <h1>Tom Walker</h1>
+    <p><em>Software Engineer</em></p>
+    <p>
+      I am a junior software engineer who is looking for their first break into
+      tech. Things i like to do are hiking with my wife and our two huskeys,
+      trying out new brewerys and exlopring as much as the world as we can
+      afford.
+    </p>
+
     <hr />
-    <h2>Hobbies</h2>
+    <h3>Things I've Learned so Far</h3>
+    <li>React</li>
   </body>
 </html>
