Added in a couple of lists

--- a/introHTML/index.html
+++ b/introHTML/index.html
@@ -18,6 +18,22 @@
 
     <hr />
     <h3>Things I've Learned so Far</h3>
-    <li>React</li>
+    <ul>
+      <li>React</li>
+      <li>JavaScript</li>
+      <li>React Native</li>
+      <li>Bootstrap</li>
+      <li>Node.js</li>
+      <li>Git</li>
+      <li>Python</li>
+      <li>SQL</li>
+    </ul>
+    <h3>My Hobbies</h3>
+    <ol>
+      <li>Snowboarding</li>
+      <li>Beer</li>
+      <li>Crossfit</li>
+      <li>SpikeBall</li>
+    </ol>
   </body>
 </html>
