Added an awesome img

--- a/introHTML/index.html
+++ b/introHTML/index.html
@@ -7,6 +7,7 @@
     <title>Tom Walker Personal Site</title>
   </head>
   <body>
+    <img src="https://picsum.photos/id/1015/500/500" alt="Clifside view" />
     <h1>Tom Walker</h1>
     <p><em>Software Engineer</em></p>
     <p>
