--- a/introHTML/index.html
+++ b/introHTML/index.html
@@ -29,12 +29,6 @@
       <li>Python</li>
       <li>SQL</li>
     </ul>
-    <h3>My Hobbies</h3>
-    <ol>
-      <li>Snowboarding</li>
-      <li>Beer</li>
-      <li>Crossfit</li>
-      <li>SpikeBall</li>
-    </ol>
+    <a href="hobbies.html">My Hobbies</a>
   </body>
 </html>
