Added a contact page

--- a/introHTML/index.html
+++ b/introHTML/index.html
@@ -30,5 +30,6 @@
       <li>SQL</li>
     </ul>
     <a href="hobbies.html">My Hobbies</a>
+    <a href="contact.html">My Contact Info</a>
   </body>
 </html>
