Added a new h1 contact details

--- a/introHTML/contact.html
+++ b/introHTML/contact.html
@@ -6,6 +6,7 @@
     <title>Contact Info</title>
   </head>
   <body>
+    <h1>Contact Details</h1>
     <h2>Email</h2>
     <ul>
       <li>tomw268@gmail.com</li>
