--- a/introHTML/index.html
+++ b/introHTML/index.html
@@ -29,6 +29,26 @@
       <li>Python</li>
       <li>SQL</li>
     </ul>
+    <h3>Work Experience</h3>
+    <table>
+      <thead>
+        <tr>
+          <th>Dates</th>
+          <th>Work</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2017-2018</td>
+          <td>Assistant manger GNC</td>
+        </tr>
+        <tr>
+          <td>2018-2020</td>
+          <td>Business Development Coyote Logistics</td>
+        </tr>
+      </tbody>
+    </table>
+    <hr />
     <a href="hobbies.html">My Hobbies</a>
     <a href="contact.html">My Contact Info</a>
   </body>
