--- a/introHTML/index.html
+++ b/introHTML/index.html
@@ -7,28 +7,52 @@
     <title>Tom Walker Personal Site</title>
   </head>
   <body>
-    <img src="https://picsum.photos/id/1015/500/500" alt="Clifside view" />
-    <h1>Tom Walker</h1>
-    <p><em>Software Engineer</em></p>
-    <p>
-      I am a junior software engineer who is looking for their first break into
-      tech. Things i like to do are hiking with my wife and our two huskeys,
-      trying out new brewerys and exlopring as much as the world as we can
-      afford.
-    </p>
+    <table cellspacing="20">
+      <tr>
+        <td>
+          <img
+            src="https://picsum.photos/id/1015/300/300"
+            alt="Clifside view"
+          />
+        </td>
+        <td>
+          <h1>Tom Walker</h1>
+          <p><em>Software Engineer</em></p>
+          <p>
+            I am a junior software engineer who is looking for their first break
+            into tech. Things i like to do are hiking with my wife and our two
+            huskeys, trying out new brewerys and exlopring as much as the world
+            as we can afford.
+          </p>
+        </td>
+      </tr>
+    </table>
 
     <hr />
-    <h3>Things I've Learned so Far</h3>
-    <ul>
-      <li>React</li>
-      <li>JavaScript</li>
-      <li>React Native</li>
-      <li>Bootstrap</li>
-      <li>Node.js</li>
-      <li>Git</li>
-      <li>Python</li>
-      <li>SQL</li>
-    </ul>
+    <h3>Skills</h3>
+    <table>
+      <tr>
+        <td>React</td>
+        <td>⭐⭐⭐⭐⭐</td>
+        <td>JavaScript</td>
+        <td>⭐⭐⭐⭐</td>
+      </tr>
+
+      <tr>
+        <td>React Native</td>
+        <td>⭐⭐⭐</td>
+        <td>Bootstrap</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+
+      <tr>
+        <td>Node.js</td>
+        <td>⭐⭐⭐⭐</td>
+        <td>Git</td>
+        <td>⭐⭐⭐⭐⭐</td>
+      </tr>
+    </table>
+
     <h3>Work Experience</h3>
     <table>
       <thead>
