Added a contact me form

--- a/introHTML/contact.html
+++ b/introHTML/contact.html
@@ -19,5 +19,16 @@
     <ul>
       <li>tom-v-w</li>
     </ul>
+    <hr />
+    <form action="mailto:tomw268@gmail.com" method="POST" enctype="text/plain">
+      <label for="">Your Name:</label>
+      <input type="text" name="yourName" />
+      <br />
+      <label for="">You Email:</label>
+      <input type="email" name="yourEmail" /> <br />
+      <label for="">Your message:</label><br />
+      <textarea name="yourMessage" id="" cols="30" rows="10"></textarea>
+      <input type="submit" />
+    </form>
   </body>
 </html>
