Adding CSS to site

--- a/introHTML/index.html
+++ b/introHTML/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tom Walker Personal Site</title>
   </head>
-  <body>
+  <body style="background-color: blue">
     <table cellspacing="20">
       <tr>
         <td>
