--- a/introCSS/index.html
+++ b/introCSS/index.html
@@ -7,7 +7,13 @@
     <title>Tom Walker Personal Site</title>
     <style>
       body {
-        background-color: blue;
+        background-color: #66bfbf;
+      }
+      hr {
+        border-style: dotted none none;
+        border-color: gray;
+        border-width: 8px;
+        width: 5%;
       }
     </style>
   </head>
