Added my ext style sheet

--- a/introCSS/index.html
+++ b/introCSS/index.html
@@ -5,17 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tom Walker Personal Site</title>
-    <style>
-      body {
-        background-color: #66bfbf;
-      }
-      hr {
-        border-style: dotted none none;
-        border-color: gray;
-        border-width: 8px;
-        width: 5%;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <table cellspacing="20">
