--- a/introCSS/baconFanSite/index.html
+++ b/introCSS/baconFanSite/index.html
@@ -12,8 +12,14 @@
     <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
     <p>bacon, bacon, bacon, bacon, bacon, bacon</p>
     <img
+      class="bacon"
       src="https://emojipedia-us.s3.amazonaws.com/thumbs/240/apple/118/bacon_1f953.png"
       alt="bacon-img"
+    />
+    <img
+      class="broccoli"
+      src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/279/broccoli_1f966.png"
+      alt="Broccoli"
     />
   </body>
 </html>
