--- a/introCSS/baconFanSite/index.html
+++ b/introCSS/baconFanSite/index.html
@@ -17,7 +17,7 @@
       alt="bacon-img"
     />
     <img
-      class="broccoli"
+      class="broccoli circular"
       src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/279/broccoli_1f966.png"
       alt="Broccoli"
     />
