--- a/Intermediate CSSmod/Portfolio Site/index.html
+++ b/Intermediate CSSmod/Portfolio Site/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tom Walker</title>
+    <title>Tom Walker - a web developer</title>
     <link rel="stylesheet" href="style.css" />
+    <link href="favicon.ico" rel="icon" type="image/x-icon" />
   </head>
   <body></body>
 </html>
