--- a/Intermediate CSSmod/Portfolio Site/index.html
+++ b/Intermediate CSSmod/Portfolio Site/index.html
@@ -7,5 +7,10 @@
     <link rel="stylesheet" href="style.css" />
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
   </head>
-  <body></body>
+  <body>
+    <div>
+      <h1>I'm Tom.</h1>
+      <p>A Programmer</p>
+    </div>
+  </body>
 </html>
