messed around with the box model on my site

--- a/Intermediate CSSmod/Portfolio Site/index.html
+++ b/Intermediate CSSmod/Portfolio Site/index.html
@@ -8,9 +8,11 @@
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
   </head>
   <body>
-    <div>
+    <div class="top-container">
       <h1>I'm Tom.</h1>
       <p>A Programmer</p>
     </div>
+    <div class="middle-container"></div>
+    <div class="bottom-container"></div>
   </body>
 </html>
