--- a/Intermediate CSSmod/Portfolio Site/index.html
+++ b/Intermediate CSSmod/Portfolio Site/index.html
@@ -9,8 +9,11 @@
   </head>
   <body>
     <div class="top-container">
+      <img src="images/cloud.png" alt="cloud-image" />
       <h1>I'm Tom.</h1>
-      <p>A Programmer</p>
+      <p>A <span class="pro">Pro</span>grammer</p>
+      <img src="images/cloud.png" alt="cloud-image" />
+      <img src="images/mountain.png" alt="mountian-image" />
     </div>
     <div class="middle-container"></div>
     <div class="bottom-container"></div>
