layout of the site is done now time to fill with my own info

--- a/Intermediate CSSmod/Portfolio Site/index.html
+++ b/Intermediate CSSmod/Portfolio Site/index.html
@@ -12,14 +12,55 @@
     />
   </head>
   <body>
-    <div class="top-container">
+    <div class="top-section">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-image" />
       <h1>I'm Tom.</h1>
       <p>A <span class="pro">Pro</span>grammer</p>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image" />
       <img src="images/mountain.png" alt="mountian-image" />
     </div>
-    <div class="middle-container"></div>
-    <div class="bottom-container"></div>
+    <div class="middle-section">
+      <div class="profile">
+        <img src="" alt="" />
+        <h2>Hello</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum,
+          maxime rem. Ex reiciendis exercitationem vero eligendi nostrum,
+          pariatur sed ratione quos doloribus et maiores placeat ab perspiciatis
+          quidem officia voluptatibus.
+        </p>
+      </div>
+      <hr />
+      <div class="skills">
+        <h2>My Skills</h2>
+        <div class="skills-row">
+          <img src="" alt="" />
+          <h3>Lorem & Ipsum</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="skill-row">
+          <img src="" alt="" />
+          <h3>Lorem Ipsum Dolor</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+      <hr />
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos unde
+          vero perspiciatis. Sit illo, quos optio a doloribus et animi,
+          veritatis labore, officia doloremque totam distinctio ad obcaecati
+          odio voluptas!
+        </p>
+        <a href="mailto:tomw268@gmail.com" class="btn">CONTACT ME</a>
+      </div>
+    </div>
+    <div class="bottom-section">
+        <a href="" class="footer-link">LinkenIn</a>
+        <a href="" class="footer-link">Twitter</a>
+        <a href="" class="footer-link">GitHub</a>
+        <p>© 2021 Tom Walker</p>
   </body>
 </html>
