Added skills to portfolilo

--- a/Intermediate CSSmod/Portfolio Site/index.html
+++ b/Intermediate CSSmod/Portfolio Site/index.html
@@ -24,10 +24,7 @@
         <img src="" alt="" />
         <h2>Hello</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum,
-          maxime rem. Ex reiciendis exercitationem vero eligendi nostrum,
-          pariatur sed ratione quos doloribus et maiores placeat ab perspiciatis
-          quidem officia voluptatibus.
+          My Name is Tom Walker and I am a Web/ IOS Developer who likes helping people and businesses craft an online experience.
         </p>
       </div>
       <hr />
@@ -35,13 +32,45 @@
         <h2>My Skills</h2>
         <div class="skills-row">
           <img src="" alt="" />
-          <h3>Lorem & Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <h3>HTML</h3>
+          <!-- add in the flat icon pictures of the tech -->
+          <p>HTML5, JSX.</p>
         </div>
         <div class="skill-row">
           <img src="" alt="" />
-          <h3>Lorem Ipsum Dolor</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <h3>CSS</h3>
+          <!-- add in the flat icon pictures of the tech -->
+          <p>CSS3, SASS, BULMA, BOOTSTRAP, TAILWIND CSS.</p>
+        </div>
+        <div class="skill-row">
+          <img src="" alt="" />
+          <h3>JAVASCRIPT</h3>
+          <!-- add in the flat icon pictures of the tech -->
+          <p>JAVASCRIPT, REACT, JQUERY, NODE.</p>
+        </div>
+        <div class="skill-row">
+          <img src="" alt="" />
+          <h3>NATIVE TECHNOLOGIES</h3>
+          <!-- add in the flat icon pictures of the tech -->
+          <p>REACT NATIVE, FLUTTER</p>
+        </div>
+        <div class="skill-row">
+          <img src="" alt="" />
+          <h3>BACKEND</h3>
+          <!-- add in the flat icon pictures of the tech -->
+          <p>POSTGRESQL, MONGODB</p>
+        </div>
+        <div class="skill-row">
+          <img src="" alt="" />
+          <h3>BUILD TOOLS</h3>
+          <!-- add in the flat icon pictures of the tech -->
+          <p>WEBPACK, GULP</p>
+        </div>
+        <div class="skill-row">
+          <img src="" alt="" />
+          <h3>OTHER</h3>
+          <!-- add in the flat icon pictures of the tech -->
+          <p>GIT, HEROKU</p>
         </div>
       </div>
       <hr />
