updated all of my contact info

--- a/Intermediate CSSmod/Portfolio Site/index.html
+++ b/Intermediate CSSmod/Portfolio Site/index.html
@@ -76,20 +76,17 @@
       <hr />
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h3>
+        <h3>if your looking for a team oreintated programmer, who wants to help make a difference I am your guy.</h3>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos unde
-          vero perspiciatis. Sit illo, quos optio a doloribus et animi,
-          veritatis labore, officia doloremque totam distinctio ad obcaecati
-          odio voluptas!
+          Get in Touch Below.
         </p>
-        <a href="mailto:tomw268@gmail.com" class="btn">CONTACT ME</a>
+        <a href="mailto:tomw268@gmail.com" class="btn">EMAIL ME</a>
       </div>
     </div>
     <div class="bottom-section">
         <a href="" class="footer-link">LinkenIn</a>
         <a href="" class="footer-link">Twitter</a>
-        <a href="" class="footer-link">GitHub</a>
+        <a href="https://github.com/tomw268" class="footer-link">GitHub</a>
         <p>© 2021 Tom Walker</p>
   </body>
 </html>
