--- a/Intermediate CSSmod/Portfolio Site/index.html
+++ b/Intermediate CSSmod/Portfolio Site/index.html
@@ -24,10 +24,19 @@
         <img src="" alt="" />
         <h2>Hello</h2>
         <p>
-          My Name is Tom Walker and I am a Web/ IOS Developer who likes helping people and businesses craft an online experience.
+          My Name is Tom Walker and I am a Web/ IOS Developer who likes helping people and businesses craft an online experience. 
         </p>
       </div>
       <hr />
+      <h2>My Projects</h2>
+      <div>
+          <a href="https://novalist.netlify.app/"><h3>Nova List</h3></a>
+          <h4>Project Overview</h4>
+          <p>This is a app that lets you keep track of the books you want to read. It also allows a search from the Google books API to reccomed the newest boos from any search term </p>
+          <h4>Build Tools</h4>
+          <p>This app was built with React.js, a css typekit and was deployed to netlify. </p>
+      </div>
+      <hr/>
       <div class="skills">
         <h2>My Skills</h2>
         <div class="skills-row">
@@ -84,7 +93,7 @@
       </div>
     </div>
     <div class="bottom-section">
-        <a href="" class="footer-link">LinkenIn</a>
+        <a href="https://www.linkedin.com/in/tom-v-walker/" class="footer-link">LinkenIn</a>
         <a href="" class="footer-link">Twitter</a>
         <a href="https://github.com/tomw268" class="footer-link">GitHub</a>
         <p>© 2021 Tom Walker</p>
