--- a/Intermediate CSSmod/Portfolio Site/index.html
+++ b/Intermediate CSSmod/Portfolio Site/index.html
@@ -15,7 +15,7 @@
     <div class="top-section">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-image" />
       <h1>I'm Tom.</h1>
-      <p>A <span class="pro">Pro</span>grammer</p>
+      <h2>A <span class="pro">Pro</span>grammer</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image" />
       <img src="images/mountain.png" alt="mountian-image" />
     </div>
