Added some skills logo pictures

--- a/Intermediate CSSmod/Portfolio Site/index.html
+++ b/Intermediate CSSmod/Portfolio Site/index.html
@@ -39,7 +39,7 @@
       <hr/>
       <div class="skills">
         <h2>My Skills</h2>
-        <div class="skills-row">
+        <div class="skill-row">
           <img src="" alt="" />
           <h3>HTML</h3>
           <!-- add in the flat icon pictures of the tech -->
@@ -52,13 +52,13 @@
           <p>CSS3, SASS, BULMA, BOOTSTRAP, TAILWIND CSS.</p>
         </div>
         <div class="skill-row">
-          <img src="" alt="" />
+          <img src="https://img.icons8.com/nolan/256/javascript.png" alt="jslogo"/>  
           <h3>JAVASCRIPT</h3>
           <!-- add in the flat icon pictures of the tech -->
           <p>JAVASCRIPT, REACT, JQUERY, NODE.</p>
         </div>
         <div class="skill-row">
-          <img src="" alt="" />
+          <img src="https://img.icons8.com/nolan/256/react-native.png" alt="reactnativeLogo"/>
           <h3>NATIVE TECHNOLOGIES</h3>
           <!-- add in the flat icon pictures of the tech -->
           <p>REACT NATIVE, FLUTTER</p>
