Added some more css

--- a/Intermediate CSSmod/Portfolio Site/index.html
+++ b/Intermediate CSSmod/Portfolio Site/index.html
@@ -58,7 +58,7 @@
           <p>JAVASCRIPT, REACT, JQUERY, NODE.</p>
         </div>
         <div class="skill-row">
-          <img src="https://img.icons8.com/nolan/256/react-native.png" alt="reactnativeLogo"/>
+          <img class = 'reactNative-img'src="https://img.icons8.com/nolan/256/react-native.png" alt="reactnativeLogo"/>
           <h3>NATIVE TECHNOLOGIES</h3>
           <!-- add in the flat icon pictures of the tech -->
           <p>REACT NATIVE, FLUTTER</p>
