Added a contact me button

--- a/Intermediate CSSmod/Portfolio Site/index.html
+++ b/Intermediate CSSmod/Portfolio Site/index.html
@@ -89,7 +89,7 @@
         <p>
           Get in Touch Below.
         </p>
-        <a href="mailto:tomw268@gmail.com" class="btn">EMAIL ME</a>
+        <button><a href="mailto:tomw268@gmail.com" class="btn">EMAIL ME</a></button>
       </div>
     </div>
     <div class="bottom-section">
