finished working on some website stuff

--- a/Intermediate CSSmod/Portfolio Site/index.html
+++ b/Intermediate CSSmod/Portfolio Site/index.html
@@ -23,7 +23,7 @@
       <div class="profile">
         <img src="" alt="" />
         <h2>Hello</h2>
-        <p>
+        <p class="intro">
           My Name is Tom Walker and I am a Web/ IOS Developer who likes helping people and businesses craft an online experience. 
         </p>
       </div>
@@ -58,8 +58,9 @@
           <p>JAVASCRIPT, REACT, JQUERY, NODE.</p>
         </div>
         <div class="skill-row">
+            <h3>NATIVE TECHNOLOGIES</h3>
           <img class = 'reactNative-img'src="https://img.icons8.com/nolan/256/react-native.png" alt="reactnativeLogo"/>
-          <h3>NATIVE TECHNOLOGIES</h3>
+          
           <!-- add in the flat icon pictures of the tech -->
           <p>REACT NATIVE, FLUTTER</p>
         </div>
@@ -85,11 +86,11 @@
       <hr />
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>if your looking for a team oreintated programmer, who wants to help make a difference I am your guy.</h3>
+        <p class="contact-message">if your looking for a team oreintated programmer, who wants to help make a difference I am your guy.</p>
         <p>
           Get in Touch Below.
         </p>
-        <button><a href="mailto:tomw268@gmail.com" class="btn">EMAIL ME</a></button>
+        <a class='myButton' href="mailto:tomw268@gmail.com" class="btn">EMAIL ME</a>
       </div>
     </div>
     <div class="bottom-section">
