--- a/Intermediate CSSmod/Bootstrap-installation/index.html
+++ b/Intermediate CSSmod/Bootstrap-installation/index.html
@@ -15,6 +15,10 @@
   <body>
     <h1>Hello World</h1>
     <h2>Welcome to my bootstrap installation site</h2>
+    <h3>
+      This is where I go back over bootstrap and really get into the nitty grity
+      of the usage!!
+    </h3>
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
