--- a/Intermediate CSSmod/Bootstrap-installation/index.html
+++ b/Intermediate CSSmod/Bootstrap-installation/index.html
@@ -17,6 +17,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;900&family=Ubuntu:wght@300&display=swap"
       rel="stylesheet"
     />
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"
+    ></script>
   </head>
 
   <body>
@@ -55,7 +59,9 @@
         <div class="row">
           <div class="col-lg-6">
             <h1>Meet new and interesting dogs nearby.</h1>
-            <button type="button" class="btn btn-dark btn-lg">Download</button>
+            <button type="button" class="btn btn-dark btn-lg">
+              <i class="fab fa-apple"></i> Download
+            </button>
             <button type="button" class="btn btn-outline-light btn-lg">
               Download
             </button>
