Added the google play icon

--- a/Intermediate CSSmod/Bootstrap-installation/index.html
+++ b/Intermediate CSSmod/Bootstrap-installation/index.html
@@ -63,6 +63,7 @@
               <i class="fab fa-apple"></i> Download
             </button>
             <button type="button" class="btn btn-outline-light btn-lg">
+              <i class="fab fa-google-play"></i>
               Download
             </button>
           </div>
