--- a/Intermediate CSSmod/Bootstrap-installation/index.html
+++ b/Intermediate CSSmod/Bootstrap-installation/index.html
@@ -69,7 +69,11 @@
           </div>
 
           <div class="col-lg-6">
-            <img src="images/iphone6.png" alt="iphone-mockup" class="col" />
+            <img
+              src="images/iphone6.png"
+              alt="iphone-mockup"
+              class="title-image"
+            />
           </div>
         </div>
       </div>
