--- a/Intermediate CSSmod/Bootstrap-installation/index.html
+++ b/Intermediate CSSmod/Bootstrap-installation/index.html
@@ -82,7 +82,7 @@
     <!-- Features -->
 
     <section id="features">
-      <h3>Easy to use.</h3>
+      <h3><i class="fas fa-check-circle"></i> Easy to use.</h3>
       <p>So easy to use, even your dog could do it.</p>
 
       <h3>Elite Clientele</h3>
