--- a/Intermediate CSSmod/Bootstrap-installation/index.html
+++ b/Intermediate CSSmod/Bootstrap-installation/index.html
@@ -85,7 +85,7 @@
       <h3><i class="fas fa-check-circle"></i> Easy to use.</h3>
       <p>So easy to use, even your dog could do it.</p>
 
-      <h3>Elite Clientele</h3>
+      <h3><i class="fas fa-bullseye"></i> Elite Clientele</h3>
       <p>We have all the dogs, the greatest dogs.</p>
 
       <h3>Guaranteed to work.</h3>
