--- a/Intermediate CSSmod/Bootstrap-installation/index.html
+++ b/Intermediate CSSmod/Bootstrap-installation/index.html
@@ -82,14 +82,18 @@
     <!-- Features -->
 
     <section id="features">
-      <h3><i class="fas fa-check-circle check-circle"></i> Easy to use.</h3>
-      <p>So easy to use, even your dog could do it.</p>
-
-      <h3><i class="fas fa-bullseye bullseye"></i> Elite Clientele</h3>
-      <p>We have all the dogs, the greatest dogs.</p>
-
-      <h3><i class="fas fa-heart heart"></i> Guaranteed to work.</h3>
-      <p>Find the love of your dog's life or your money back.</p>
+      <div class="feature-box">
+        <h3><i class="fas fa-check-circle check-circle"></i> Easy to use.</h3>
+        <p>So easy to use, even your dog could do it.</p>
+      </div>
+      <div class="feature-box">
+        <h3><i class="fas fa-bullseye bullseye"></i> Elite Clientele</h3>
+        <p>We have all the dogs, the greatest dogs.</p>
+      </div>
+      <div class="feature-box">
+        <h3><i class="fas fa-heart heart"></i> Guaranteed to work.</h3>
+        <p>Find the love of your dog's life or your money back.</p>
+      </div>
     </section>
 
     <!-- Testimonials -->
