updated the size of the feature icons

--- a/Intermediate CSSmod/Bootstrap-installation/index.html
+++ b/Intermediate CSSmod/Bootstrap-installation/index.html
@@ -84,15 +84,18 @@
     <section id="features">
       <div class="row">
         <div class="feature-box col-lg-4">
-          <h3><i class="fas fa-check-circle check-circle"></i> Easy to use.</h3>
+          <i class="fas fa-check-circle check-circle fa-4x"></i>
+          <h3>Easy to use.</h3>
           <p>So easy to use, even your dog could do it.</p>
         </div>
         <div class="feature-box col-lg-4">
-          <h3><i class="fas fa-bullseye bullseye"></i> Elite Clientele</h3>
+          <i class="fas fa-bullseye bullseye fa-4x"></i>
+          <h3>Elite Clientele</h3>
           <p>We have all the dogs, the greatest dogs.</p>
         </div>
         <div class="feature-box col-lg-4">
-          <h3><i class="fas fa-heart heart"></i> Guaranteed to work.</h3>
+          <i class="fas fa-heart heart fa-4x"></i>
+          <h3>Guaranteed to work.</h3>
           <p>Find the love of your dog's life or your money back.</p>
         </div>
       </div>
