--- a/Intermediate CSSmod/Bootstrap-installation/index.html
+++ b/Intermediate CSSmod/Bootstrap-installation/index.html
@@ -123,10 +123,14 @@
     <!-- Press -->
 
     <section id="press">
-      <img src="images/techcrunch.png" alt="tc-logo" />
-      <img src="images/tnw.png" alt="tnw-logo" />
-      <img src="images/bizinsider.png" alt="biz-insider-logo" />
-      <img src="images/mashable.png" alt="mashable-logo" />
+      <img class="press-images" src="images/techcrunch.png" alt="tc-logo" />
+      <img class="press-images" src="images/tnw.png" alt="tnw-logo" />
+      <img
+        class="press-images"
+        src="images/bizinsider.png"
+        alt="biz-insider-logo"
+      />
+      <img class="press-images" src="images/mashable.png" alt="mashable-logo" />
     </section>
 
     <!-- Pricing -->
