added more content

--- a/Intermediate CSSmod/Bootstrap-installation/index.html
+++ b/Intermediate CSSmod/Bootstrap-installation/index.html
@@ -138,6 +138,7 @@
     <section id="pricing">
       <h2>A Plan for Every Dog's Needs</h2>
       <p>Simple and affordable price plans for your and your dog.</p>
+      <p>Welcome</p>
 
       <h3>Chihuahua</h3>
       <h2>Free</h2>
