added the first img to the carousel

--- a/Intermediate CSSmod/Bootstrap-installation/index.html
+++ b/Intermediate CSSmod/Bootstrap-installation/index.html
@@ -121,7 +121,13 @@
     </section>
 
     <!-- Press -->
-
+    <div id="testamonials" class="carousel slide" data-ride="false">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="press-images" src="images/techcrunch.png" alt="tc-logo" />
+        </div>
+      </div>
+    </div>
     <section id="press">
       <img class="press-images" src="images/techcrunch.png" alt="tc-logo" />
       <img class="press-images" src="images/tnw.png" alt="tnw-logo" />
@@ -138,7 +144,6 @@
     <section id="pricing">
       <h2>A Plan for Every Dog's Needs</h2>
       <p>Simple and affordable price plans for your and your dog.</p>
-      <p>Welcome</p>
 
       <h3>Chihuahua</h3>
       <h2>Free</h2>
