added the carousel to the correct spot

--- a/Intermediate CSSmod/Bootstrap-installation/index.html
+++ b/Intermediate CSSmod/Bootstrap-installation/index.html
@@ -104,6 +104,35 @@
     <!-- Testimonials -->
 
     <section id="testimonials">
+      <div
+        id="testimonial-carousel"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active"></div>
+          <div class="carousel-item"></div>
+          <div class="carousel-item"></div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#testimonial-carousel"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#testimonial-carousel"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
       <h2>
         I no longer have to sniff other dogs for love. I've found the hottest
         Corgi on TinDog. Woof.
@@ -121,13 +150,7 @@
     </section>
 
     <!-- Press -->
-    <div id="testamonials" class="carousel slide" data-ride="false">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="press-images" src="images/techcrunch.png" alt="tc-logo" />
-        </div>
-      </div>
-    </div>
+
     <section id="press">
       <img class="press-images" src="images/techcrunch.png" alt="tc-logo" />
       <img class="press-images" src="images/tnw.png" alt="tnw-logo" />
