--- a/Intermediate CSSmod/Bootstrap-installation/index.html
+++ b/Intermediate CSSmod/Bootstrap-installation/index.html
@@ -110,8 +110,18 @@
         data-bs-ride="carousel"
       >
         <div class="carousel-inner">
-          <div class="carousel-item active"></div>
-          <div class="carousel-item"></div>
+          <div class="carousel-item active">
+            <h2>
+              I no longer have to sniff other dogs for love. I've found the
+              hottest Corgi on TinDog. Woof.
+            </h2>
+            <img
+              class="testimonial-image"
+              src="images/dog-img.jpg"
+              alt="dog-profile"
+            />
+            <em>Pebbles, New York</em>
+          </div>
           <div class="carousel-item"></div>
         </div>
         <button
@@ -133,20 +143,17 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <h2>
-        I no longer have to sniff other dogs for love. I've found the hottest
-        Corgi on TinDog. Woof.
+
+      <h2 class="testimonial-text">
+        My dog used to be so lonely, but with TinDog's help, they've found the
+        love of their life. I think.
       </h2>
       <img
         class="testimonial-image"
-        src="images/dog-img.jpg"
-        alt="dog-profile"
+        src="images/lady-img.jpg"
+        alt="lady-profile"
       />
-      <em>Pebbles, New York</em>
-
-      <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
+      <em>Beverly, Illinois</em>
     </section>
 
     <!-- Press -->
