--- a/Intermediate CSSmod/Bootstrap-installation/index.html
+++ b/Intermediate CSSmod/Bootstrap-installation/index.html
@@ -122,7 +122,18 @@
             />
             <em>Pebbles, New York</em>
           </div>
-          <div class="carousel-item"></div>
+          <div class="carousel-item">
+            <h2 class="testimonial-text">
+              My dog used to be so lonely, but with TinDog's help, they've found
+              the love of their life. I think.
+            </h2>
+            <img
+              class="testimonial-image"
+              src="images/lady-img.jpg"
+              alt="lady-profile"
+            />
+            <em>Beverly, Illinois</em>
+          </div>
         </div>
         <button
           class="carousel-control-prev"
@@ -143,17 +154,6 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-
-      <h2 class="testimonial-text">
-        My dog used to be so lonely, but with TinDog's help, they've found the
-        love of their life. I think.
-      </h2>
-      <img
-        class="testimonial-image"
-        src="images/lady-img.jpg"
-        alt="lady-profile"
-      />
-      <em>Beverly, Illinois</em>
     </section>
 
     <!-- Press -->
