--- a/Intermediate CSSmod/Bootstrap-installation/index.html
+++ b/Intermediate CSSmod/Bootstrap-installation/index.html
@@ -107,7 +107,7 @@
       <div
         id="testimonial-carousel"
         class="carousel slide"
-        data-bs-ride="carousel"
+        data-bs-ride="false"
       >
         <div class="carousel-inner">
           <div class="carousel-item active">
