got pricing cards fixed

--- a/Intermediate CSSmod/Bootstrap-installation/index.html
+++ b/Intermediate CSSmod/Bootstrap-installation/index.html
@@ -170,11 +170,11 @@
     </section>
 
     <!-- Pricing -->
-
+<div class="card-group">
     <section id="pricing">
       <h2>A Plan for Every Dog's Needs</h2>
       <p>Simple and affordable price plans for your and your dog.</p>
-
+<div class="col">
       <div class="card">
         <div class="card-header">
           <h3>Chihuahua</h3>
@@ -187,6 +187,8 @@
           <button type="button">Sign Up</button>
         </div>
       </div>
+      </div>
+      <div class="col">
       <div class="card">
         <div class="card-header">
           <h3>Labrador</h3>
@@ -199,6 +201,8 @@
           <button type="button">Sign Up</button>
         </div>
       </div>
+      </div>
+      <div class="col">
       <div class="card">
         <div class="card-header">
           <h3>Mastiff</h3>
@@ -212,6 +216,8 @@
           <button type="button">Sign Up</button>
         </div>
       </div>
+    </div>
+    </div>
     </section>
 
     <!-- Call to Action -->
