--- a/WebDev2/section3/chickens.html
+++ b/WebDev2/section3/chickens.html
@@ -1,5 +1,5 @@
-<h1>
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum nemo vero
-  dolore, similique corrupti itaque vel sint ex esse modi a quam reiciendis
+<p>
+  <b>Lorem</b>, ipsum dolor sit amet consectetur adipisicing elit. Dolorum nemo
+  vero dolore, similique corrupti itaque vel sint ex esse modi a quam reiciendis
   accusantium et commodi porro illum nam impedit.
-</h1>
+</p>
