--- a/WebDev2/section3/chickens.html
+++ b/WebDev2/section3/chickens.html
@@ -1,7 +1,29 @@
 <p>
   <b>Lorem</b>, ipsum dolor sit amet consectetur adipisicing elit. Dolorum nemo
-  vero dolore, 
+  vero dolore, Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci facere corrupti veritatis totam suscipit odio repellendus non quae optio quod, provident similique numquam explicabo expedita quas harum error, cum quisquam?
   
   <p>similique corrupti itaque vel sint ex esse modi a quam reiciendis
-  accusantium et commodi porro illum nam impedit.</p>
+  accusantium et commodi porro illum nam impedit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni numquam eaque dolorum est nulla natus velit eum architecto cumque earum fugit atque voluptatem dicta rerum, nemo sunt debitis. Est, laboriosam.</p>
 </p>
+
+
+<!-- Heading elements -->
+<h1>chicken</h1>
+<h2>terminolog</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur consectetur ex neque sequi voluptates. Facilis ratione magnam odit, neque eaque nam, dicta sint totam veritatis ut sequi ducimus praesentium hic.</p>
+<h2>general bio and habitat</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur ipsa ducimus ad molestias quisquam magni dicta, provident fuga, nam nesciunt itaque est reprehenderit. Ipsum nemo tempora repellat corporis consequuntur? Quam.
+Ex, rem! Repudiandae commodi maxime fugiat facilis voluptate necessitatibus, cum eligendi repellat quibusdam sapiente laboriosam dolorum optio? Enim odit, quisquam laudantium quam quibusdam aut rem aliquid, praesentium, quas voluptatibus dolores.
+Voluptate mollitia at alias pariatur sunt vel maxime? Provident, earum molestias sapiente quasi nulla voluptate dignissimos mollitia quae repellendus maiores minima perferendis error totam, voluptatum exercitationem, cupiditate repellat sequi iure!
+Enim autem ab similique a, sit quia ad. Illo voluptatem quas cum dolore beatae quos a iure atque iste. Exercitationem, earum magni eos error est eaque suscipit porro placeat assumenda.
+Sapiente consectetur dolorem nostrum totam, molestiae vitae hic enim praesentium blanditiis voluptates dignissimos a beatae quaerat facilis iste ducimus eum perspiciatis distinctio tempora deleniti! Veniam quaerat dolore soluta non iste.
+Incidunt aliquam placeat omnis sapiente nobis maiores hic ipsa harum sequi accusamus, rem ducimus unde asperiores doloribus voluptatum provident illum laudantium quasi nesciunt eveniet ea. Libero dicta impedit sunt at.
+Corrupti recusandae aperiam reiciendis explicabo ratione ipsum non laborum dignissimos tempore nam aspernatur, quisquam corporis vel velit culpa ducimus praesentium ipsa eum, sapiente consequuntur repellat? Quo atque nulla natus sequi!
+Modi commodi, minus fugit quisquam molestiae distinctio officiis vero aliquid voluptatum illo dolores corporis unde ducimus saepe atque dolorem, in facere alias cum, assumenda nam earum! Suscipit nobis est cumque!
+Nobis quaerat consequatur labore vero quas mollitia non, eum illum unde iusto quam amet animi explicabo id repellendus dolore hic saepe dicta minus. Aut hic voluptatibus veniam fugiat. Velit, a?
+Dignissimos animi natus facere unde debitis, laborum rerum cumque doloribus laudantium reprehenderit maxime ad facilis tenetur repellendus iure, ex aut. Eveniet nam recusandae exercitationem dolores quia rerum quas unde. Assumenda.</p>
+<h3>behavior</h3>
+<h4>social behavior</h4>
+<h4>broodiness</h4>
+<h5>i am h5</h5>
+<h6>i am h6</h6>
