woking with list elements

--- a/WebDev2/section3/chickens.html
+++ b/WebDev2/section3/chickens.html
@@ -35,5 +35,12 @@
       <h4>broodiness</h4>
       <h5>i am h5</h5>
       <h6>i am h6</h6>
+      <h2 >Breeds of Chickens</h2>
+      <ul>
+          <li>Silkie</li>
+          <li>Polish</li>
+          <li>Easter Egger</li>
+          <li>Rhode Island Red</li>
+      </ul>
 </body>
 </html>
