--- a/WebDev2/section3/chickens.html
+++ b/WebDev2/section3/chickens.html
@@ -37,10 +37,15 @@
       <h6>i am h6</h6>
       <h2 >Breeds of Chickens</h2>
       <ul>
-          <li>Silkie</li>
-          <li>Polish</li>
-          <li>Easter Egger</li>
-          <li>Rhode Island Red</li>
+          <li>Bantam
+              <ol><li>Silkie</li>
+                <li>Polish</li></ol>
+          </li>
+          <li>Standard
+              <ol>   <li>Easter Egger</li>
+                <li>Rhode Island Red</li></ol>
+          </li>
+       
       </ul>
 </body>
 </html>
