--- a/WebDev2/section3/chickens.html
+++ b/WebDev2/section3/chickens.html
@@ -17,6 +17,7 @@
       
       <!-- Heading elements -->
       <h1>chicken</h1>
+      <a href="http://google.com">Google Link</a>
       <a href="about.html">I'm a Link</a>
       <h2>terminolog</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur consectetur ex neque sequi voluptates. Facilis ratione magnam odit, neque eaque nam, dicta sint totam veritatis ut sequi ducimus praesentium hic.</p>
