working with block and inline elemets

--- a/WebDev2/section4/chickens.html
+++ b/WebDev2/section4/chickens.html
@@ -8,6 +8,9 @@
   <body>
     <!-- Heading elements -->
     <h1>chicken</h1>
+    <a href="jahjskhajksha">jkahsjkahdjkhaskdjhajksd</a>
+    <p>jhasjahsjahsajhsjahs</p>
+    <a href="jshdksjhds">ajhsjahsjhhajhs</a>
     <img
       src="https://today.oregonstate.edu/sites/today.oregonstate.edu/files/styles/1200x564/public/chicken.jpg?itok=Q7QS4o-F"
       alt="A Rooster"
