added a div to the links to make them a block element

--- a/WebDev2/section4/chickens.html
+++ b/WebDev2/section4/chickens.html
@@ -8,15 +8,14 @@
   <body>
     <!-- Heading elements -->
     <h1>chicken</h1>
-    <a href="jahjskhajksha">jkahsjkahdjkhaskdjhajksd</a>
-    <p>jhasjahsjahsajhsjahs</p>
-    <a href="jshdksjhds">ajhsjahsjhhajhs</a>
     <img
       src="https://today.oregonstate.edu/sites/today.oregonstate.edu/files/styles/1200x564/public/chicken.jpg?itok=Q7QS4o-F"
       alt="A Rooster"
     />
-    <a href="http://google.com">Google Link</a>
-    <a href="about.html">I'm a Link</a>
+    <div>
+      <a href="http://google.com">Google Link</a>
+      <a href="about.html">I'm a Link</a>
+    </div>
     <h2>terminolog</h2>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
