--- a/ZtoM Web-Dev/Section2/index.html
+++ b/ZtoM Web-Dev/Section2/index.html
@@ -7,5 +7,22 @@
   </head>
   <body>
     <h1>Booo!</h1>
+    <h3>Boo!</h3>
+    <h6>Booo!</h6>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet, aperiam
+      saepe magni ipsum a ipsa modi similique reprehenderit tenetur eius. Fugit
+      voluptatum tempore ab tenetur repudiandae deserunt tempora nemo aut.
+    </p>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet, aperiam
+      saepe magni ipsum a ipsa modi similique reprehenderit tenetur eius. Fugit
+      voluptatum tempore ab tenetur repudiandae deserunt tempora nemo aut.
+    </p>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet, aperiam
+      saepe magni ipsum a ipsa modi similique reprehenderit tenetur eius. Fugit
+      voluptatum tempore ab tenetur repudiandae deserunt tempora nemo aut.
+    </p>
   </body>
 </html>
