--- a/ZtoM Web-Dev/Section2/index.html
+++ b/ZtoM Web-Dev/Section2/index.html
@@ -10,14 +10,16 @@
     <h3>Boo!</h3>
     <h6>Booo!</h6>
     <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet, aperiam
-      saepe magni ipsum a ipsa modi similique reprehenderit tenetur eius. Fugit
-      voluptatum tempore ab tenetur repudiandae deserunt tempora nemo aut.
+      <em>Lorem ipsum</em> dolor, sit amet consectetur adipisicing elit.
+      Eveniet, aperiam saepe magni ipsum a ipsa modi similique reprehenderit
+      tenetur eius. Fugit voluptatum tempore ab tenetur repudiandae deserunt
+      tempora nemo aut.
     </p>
     <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet, aperiam
-      saepe magni ipsum a ipsa modi similique reprehenderit tenetur eius. Fugit
-      voluptatum tempore ab tenetur repudiandae deserunt tempora nemo aut.
+      <strong>Lorem ipsum</strong> dolor, sit amet consectetur adipisicing elit.
+      Eveniet, aperiam saepe magni ipsum a ipsa modi similique reprehenderit
+      tenetur eius. Fugit voluptatum tempore ab tenetur repudiandae deserunt
+      tempora nemo aut.
     </p>
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet, aperiam
