--- a/ZtoM Web-Dev/Section2/index.html
+++ b/ZtoM Web-Dev/Section2/index.html
@@ -6,7 +6,7 @@
     <title>First Page</title>
   </head>
   <body>
-    <h1>Booo!</h1>
+    <!-- <h1>Booo!</h1>
     <h3>Boo!</h3>
     <h6>Booo!</h6>
     <p>
@@ -25,6 +25,17 @@
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet, aperiam
       saepe magni ipsum a ipsa modi similique reprehenderit tenetur eius. Fugit
       voluptatum tempore ab tenetur repudiandae deserunt tempora nemo aut.
-    </p>
+    </p> -->
+    <ul>
+      <li>Banna</li>
+
+      <li>apple</li>
+      <ul>
+        <li>fuji</li>
+        <li>honey crisp</li>
+      </ul>
+
+      <li>orange</li>
+    </ul>
   </body>
 </html>
