moving on to next section

--- a/ZtoM Web-Dev/Section2/index.html
+++ b/ZtoM Web-Dev/Section2/index.html
@@ -26,7 +26,7 @@
       saepe magni ipsum a ipsa modi similique reprehenderit tenetur eius. Fugit
       voluptatum tempore ab tenetur repudiandae deserunt tempora nemo aut.
     </p> -->
-    <a href="newpage.html">search</a>
+    <a href="new">search</a>
     <ul>
       <li>Banna</li>
       <li>apple</li>
