--- a/Full Stack Web Dev/section 2/intro.html
+++ b/Full Stack Web Dev/section 2/intro.html
@@ -4,3 +4,9 @@ not a programming languafe but a markup
 used to define the structure of web pages and its contents
 consists of a seiries of elements to enclose contents
 html elements are represented by tags -->
+
+<!-- HTML Elements -->
+<!-- an emelemts is part of the webpage
+an emelemts may contain data, text or image but can also be empty -->
+
+<h1>The beginning is the most important part of the work</h1>
