HTML Doc Structure

--- a/Full Stack Web Dev/section 2/intro.html
+++ b/Full Stack Web Dev/section 2/intro.html
@@ -10,3 +10,19 @@ html elements are represented by tags -->
 an emelemts may contain data, text or image but can also be empty -->
 
 <h1>The beginning is the most important part of the work</h1>
+
+<!-- Basic structure of HTML Doc  -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>Hello world</h1>
+    <p>Below is an image of a puppy</p>
+    <img src="images/puppy.jpg" alt="cut dog image" />
+  </body>
+</html>
