--- a/Full Stack Web Dev/section 2/intro.html
+++ b/Full Stack Web Dev/section 2/intro.html
@@ -18,7 +18,7 @@ an emelemts may contain data, text or image but can also be empty -->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Html Doc Structure</title>
   </head>
   <body>
     <h1>Hello world</h1>
