--- a/Full Stack Web Dev/section 2/intro.html
+++ b/Full Stack Web Dev/section 2/intro.html
@@ -24,5 +24,6 @@ an emelemts may contain data, text or image but can also be empty -->
     <h1>Hello world</h1>
     <p>Below is an image of a puppy</p>
     <img src="images/puppy.jpg" alt="cut dog image" />
+    <h2>Goodbye world</h2>
   </body>
 </html>
