added p tag explination

--- a/Full Stack Web Dev/section 2/intro.html
+++ b/Full Stack Web Dev/section 2/intro.html
@@ -25,6 +25,8 @@ an emelemts may contain data, text or image but can also be empty -->
     <p>Below is an image of a puppy</p>
     <img src="images/puppy.jpg" alt="cut dog image" />
     <h2>Goodbye world</h2>
-    <!-- Headings or subheading h1-h6 -->
+    <!-- Headings or subheading h1-h6 are included in your html mark up -->
+    <!-- Paragraph or p tag -->
+    <p>this is a paragraph tag</p>
   </body>
 </html>
