added some OL and UL lists

--- a/Full Stack Web Dev/section 2/intro.html
+++ b/Full Stack Web Dev/section 2/intro.html
@@ -28,5 +28,17 @@ an emelemts may contain data, text or image but can also be empty -->
     <!-- Headings or subheading h1-h6 are included in your html mark up -->
     <!-- Paragraph or p tag -->
     <p>this is a paragraph tag</p>
+
+    <!-- Lists ordered/ unordereds -->
+    <ol>
+      <li>banna</li>
+      <li>apple</li>
+      <li>pb</li>
+    </ol>
+    <ul>
+      <li>shoes</li>
+      <li>socks</li>
+      <li>tooth brush</li>
+    </ul>
   </body>
 </html>
