added some links

--- a/Full Stack Web Dev/section 2/intro.html
+++ b/Full Stack Web Dev/section 2/intro.html
@@ -40,5 +40,6 @@ an emelemts may contain data, text or image but can also be empty -->
       <li>socks</li>
       <li>tooth brush</li>
     </ul>
+    <a href="https://www.google.com">Google</a>
   </body>
 </html>
