added another link

--- a/Full Stack Web Dev/section 2/intro.html
+++ b/Full Stack Web Dev/section 2/intro.html
@@ -40,6 +40,11 @@ an emelemts may contain data, text or image but can also be empty -->
       <li>socks</li>
       <li>tooth brush</li>
     </ul>
+    <!-- Links -->
     <a href="https://www.google.com">Google</a>
+    <p>
+      Feeling <a href="https://quotesforthought.com">Gratitue</a> and not
+      expressing it is like qwrapping a present and not giving it.
+    </p>
   </body>
 </html>
