added a style sheet and colored the h1

--- a/Full Stack Web Dev/section 3/intro.html
+++ b/Full Stack Web Dev/section 3/intro.html
@@ -18,6 +18,7 @@ an emelemts may contain data, text or image but can also be empty -->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Html CSS</title>
   </head>
   <body>
@@ -25,5 +26,6 @@ an emelemts may contain data, text or image but can also be empty -->
     1- External aka with a css style sheer
     2- internal
     3- inline -->
+    <h1>CSS Styling</h1>
   </body>
 </html>
