--- a/Full Stack Web Dev/section 3/intro.html
+++ b/Full Stack Web Dev/section 3/intro.html
@@ -1,24 +1,9 @@
-<!-- What is html -->
-<!-- Hypter text markup
-not a programming languafe but a markup
-used to define the structure of web pages and its contents
-consists of a seiries of elements to enclose contents
-html elements are represented by tags -->
-
-<!-- HTML Elements -->
-<!-- an emelemts is part of the webpage
-an emelemts may contain data, text or image but can also be empty -->
-
-<h1>The beginning is the most important part of the work</h1>
-
-<!-- Basic structure of HTML Doc  -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style/style.css" />
     <title>Html CSS</title>
   </head>
   <body>
