added a ul and a link so I can use css to change multi things at once

--- a/Full Stack Web Dev/section 3/intro.html
+++ b/Full Stack Web Dev/section 3/intro.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <!-- 3 ways to apply CSS
-    1- External aka with a css style sheer
+    1- External aka with a css style sheet. The most effictive way to style.
     2- internal
     3- inline -->
     <h1>CSS Styling</h1>
@@ -31,5 +31,15 @@
       beatae necessitatibus, eaque inventore? Pariatur nam temporibus veritatis
       unde repellendus!
     </p>
+    <h2>Let us try to be:</h2>
+    <ul>
+      <li>Kind</li>
+      <li>Patient</li>
+      <li>Forgiving</li>
+      <p>
+        Feeling <a href="https://quotesforthought.com">Gratitue</a> and not
+        expressing it is like qwrapping a present and not giving it.
+      </p>
+    </ul>
   </body>
 </html>
