--- a/Full Stack Web Dev/section 3/intro.html
+++ b/Full Stack Web Dev/section 3/intro.html
@@ -36,7 +36,7 @@
       <li>Kind</li>
       <li>Patient</li>
       <li>Forgiving</li>
-      <p>
+      <p id="quote">
         Feeling <a href="https://quotesforthought.com">Gratitue</a> and not
         expressing it is like qwrapping a present and not giving it.
       </p>
