added a class to the top 2 p elements

--- a/Full Stack Web Dev/section 3/intro.html
+++ b/Full Stack Web Dev/section 3/intro.html
@@ -12,13 +12,13 @@
     2- internal
     3- inline -->
     <h1>CSS Styling</h1>
-    <p>
+    <p class="top">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod dolorem odio
       quaerat impedit commodi accusantium totam voluptatum dolores beatae eum
       nemo voluptas at assumenda, ad maiores, suscipit deserunt! Nihil, odit.
     </p>
 
-    <p>
+    <p class="top">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
       explicabo veniam numquam dolorem eligendi hic eius esse officia quos,
       debitis quod mollitia illo quia, ipsum aliquid reprehenderit distinctio at
