added an external js file

--- a/Full Stack Web Dev/section 5/intro.html
+++ b/Full Stack Web Dev/section 5/intro.html
@@ -42,9 +42,6 @@
         expressing it is like qwrapping a present and not giving it.
       </p>
     </ul>
-    <script>
-      let myHeading = document.querySelector('h1');
-      myHeading.textContent = 'Be Kind using Js';
-    </script>
+    <script src="script/index.js"></script>
   </body>
 </html>
