--- a/Complete web dev/section 2/index.html
+++ b/Complete web dev/section 2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tom's Site</title>
+    <title>💚 Tom's Personal Site</title>
   </head>
   <body>
     <h1>Tom Walker</h1>
