added my current work title

--- a/Complete web dev/section 2/index.html
+++ b/Complete web dev/section 2/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>💚 Tom's Personal Site</title>
+    <title>Tom's Personal Site</title>
   </head>
   <body>
     <h1>Tom Walker</h1>
+    <p><em>Senior Sales Rep</em></p>
   </body>
 </html>
