added more personal info to site

--- a/Complete web dev/section 2/index.html
+++ b/Complete web dev/section 2/index.html
@@ -8,5 +8,8 @@
   <body>
     <h1>Tom Walker</h1>
     <p><em>Senior Sales Rep</em></p>
+    <p>I am a Devloper and Tech sales rep</p>
+    <hr />
+    <h3>Ed</h3>
   </body>
 </html>
